# ASA-Acars

./: .gitignore  LICENSE  README.md  SUMMARY_OVERNIGHT.md
.github/: RELEASING.md
.github/workflows/: release.yml
client/: README.md  index.html  package-lock.json  package.json
client/server-module/CloudeAcars/: composer.json  module.json
client/server-module/CloudeAcars/Config/: config.php
client/server-module/CloudeAcars/Database/migrations/: 2026_05_09_000000_create_cloudeacars_config.php  2026_05_09_000001_create_cloudeacars_pirep_extra.php  2026_05_09_000002_create_cloudeacars_client_versions.php
client/server-module/CloudeAcars/Models/: ClientVersion.php  Config.php  PirepExtra.php
client/server-module/CloudeAcars/Providers/: CloudeAcarsServiceProvider.php  EventServiceProvider.php
client/server-module/CloudeAcars/Resources/views/: index.blade.php
client/server-module/CloudeAcars/Routes/: api.php  web.php
client/server-module/CloudeAcars/Services/: CloudeAcarsService.php
client/src/: App.css  App.tsx  main.tsx  theme.ts  types.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/crates/api-client/: Cargo.toml
client/src-tauri/crates/api-client/src/: lib.rs
client/src-tauri/crates/flyazoresacars-mqtt/: Cargo.toml
client/src-tauri/crates/flyazoresacars-mqtt/src/: lib.rs  log_upload.rs  provision.rs
client/src-tauri/crates/geo/: Cargo.toml
client/src-tauri/crates/geo/src/: lib.rs
client/src-tauri/crates/landing-scoring/: Cargo.toml
client/src-tauri/crates/landing-scoring/src/: gate.rs  lib.rs  sub_bounces.rs  sub_fuel.rs  sub_g_force.rs  sub_landing_rate.rs  sub_loadsheet.rs  sub_rollout.rs  sub_stability.rs
client/src-tauri/crates/landing-scoring/tests/: goldenset.rs
client/src-tauri/crates/metar/: Cargo.toml
client/src-tauri/crates/metar/src/: lib.rs
client/src-tauri/crates/recorder/: Cargo.toml
client/src-tauri/crates/recorder/src/: lib.rs
client/src-tauri/crates/secrets/: Cargo.toml
client/src-tauri/crates/secrets/src/: lib.rs
client/src-tauri/crates/sim-core/: Cargo.toml
client/src-tauri/crates/sim-msfs/: Cargo.toml  build.rs
client/src-tauri/crates/sim-msfs/src/: adapter.rs
client/src-tauri/crates/sim-xplane/: Cargo.toml
client/src-tauri/crates/sim-xplane/src/: adapter.rs  dataref.rs  lib.rs  premium.rs  probe.rs  web_api.rs
client/src-tauri/crates/storage/: Cargo.toml
client/src-tauri/crates/storage/src/: lib.rs
client/src-tauri/src/: discord.rs  lib.rs  main.rs  touchdown_v2.rs  xplane_plugin_install.rs
client/src-tauri/tests/: phase_fsm_replay.rs  touchdown_v2_replay.rs
client/src/components/: AboutPanel.tsx  ActiveFlightPanel.tsx  ActivityLogPanel.tsx  BidsList.tsx  ConfirmDialog.tsx  Dashboard.tsx  DivertBanner.tsx  FlightInfoPanel.tsx  ForensicsBadge.tsx  InfoStrip.tsx  LiveRecordingIndicator.tsx  LiveTapes.tsx  LoadsheetMonitor.tsx  LoginPage.tsx  ManualFileDialog.tsx  MassPanel.tsx  PilotHeader.tsx  PmdgPremiumPanel.tsx  ReleaseNotesModal.tsx  ResumeFlightBanner.tsx  SettingsPanel.tsx  SimDebugPanel.tsx  SimDiffSnapshot.tsx  SinkrateForensik.tsx  XPlaneInspector.tsx  XPlanePremiumPanel.tsx  about-panel.css
client/src/hooks/: useUpdateChecker.ts
client/src/i18n/: index.ts
client/src/lib/: landingScoring.ts  refreshErrorFormatter.ts
client/src/locales/de/: common.json
client/src/locales/en/: common.json
client/src/locales/it/: common.json
client/src/locales/pt/: common.json
docs/: landing-detection.md  simconnect-research.md
docs/spec/: aircraft-type-match.md  flight-phase-state-machine.md  ofp-refresh-during-boarding.md  ofp-refresh-simbrief-direct-v0.7.8.md  v0.7.1-landing-ux-fairness.md  v0.7.8-landing-rate-explainability.md
xplane-plugin/: README.md
(+7 files in other folders)
