[package]
name = "geo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runway database, great-circle math, and runway-centerline geometry"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
