[package]
name = "landing-scoring"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "FlyAzoresACARS landing-score sub-score & master-score algorithm. Single source of truth (v0.7.1)."

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
