[package]
name = "sim-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Simulator-agnostic abstractions: SimAdapter trait, SimSnapshot, flight-phase FSM"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
